--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000"/>
     <meta
             name="description"
-            content="Web site created using create-react-app"
+            content="A lot of games"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -23,6 +23,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Gochi+Hand&family=Open+Sans&family=Roboto:wght@700&display=swap" rel="stylesheet">
+
     <title>Game On Star</title>
 </head>
 <body>
